# builder

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  WARP.md  code.rs  evolution.md  flake.nix  release.md  test-playground.sh  test.sh
.cargo-husky/hooks/: pre-commit
.github/workflows/: build_nix.yml  release.yml  rust.yaml  rust.yml
.serena/: project.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
cmd/: Cargo.toml
cmd/src/: config.rs  ext.rs  lib.rs  main.rs  runtime_info.rs  types.rs  util.rs
cmd/src/config/: file.rs  fontforge.rs  localized.rs  manifest.rs  mod.rs  out.rs  sass.rs
cmd/src/ext/: mod.rs
cmd/src/generate/: asset.rs  generator.rs  mod.rs  output.rs
cmd/src/install/: hooks.rs  targets.rs
cmd/src/postbuild/: args.rs  assembly.rs  config.rs  manifest.rs  mod.rs  wasm.rs
cmd/src/prebuild/: args.rs  assembly.rs  config.rs  file.rs  fontforge.rs  localized.rs  manifest.rs  mod.rs  sass.rs
cmd/src/process/: fontforge.rs  localized.rs  mod.rs  out.rs  sass.rs
cmd/tests/styles/: style.scss
cmd/tests/styles/stylesheets/: style.css
crates/assemble/: Cargo.toml
crates/assemble/src/: asset.rs  asset_ext.rs  asset_incl.rs  file_name_parts.rs  generator.rs  lib.rs  main.rs  mime.rs
crates/assets/: Cargo.toml  README.md
crates/assets/src/: asset.rs  asset_set.rs  catalog.rs  encoding.rs  file_path.rs  lib.rs  negotiation.rs  runtime_config.rs
crates/builder/: Builder.toml  Cargo.toml  input.yaml
crates/builder-poc/: Cargo.toml
crates/builder/src/: builder.rs  cmd_runner.rs  commands.rs  config.rs  envs.rs  input.rs  lib.rs  main.rs  output.rs  task.rs  util.rs
crates/builder/src/ext/: metadata.rs  mod.rs  value.rs
crates/builder/src/generate/: asset.rs  generator.rs  output.rs
crates/builder/src/install/: command.rs  hooks.rs
crates/builder/src/postbuild/: assembly.rs  config.rs  wasm.rs
crates/builder/src/prebuild/: assembly.rs  config.rs  file.rs  fontforge.rs  localized.rs  mod.rs  sass.rs
crates/builder/src/tables/: configs.rs  mod.rs
crates/builder/src/tables/binaries/: installer.rs  mod.rs  status.rs
crates/builder/src/tasks/: file.rs  fontforge.rs  localized.rs  mod.rs  postbuild.rs  prebuild.rs  sass.rs  setup.rs  uniffi.rs  wasm.rs
crates/builder/src/types/: envs.rs  output.rs  phase.rs  profiles.rs
crates/builder/src/types/plugin/: assembly.rs  mod.rs  profile.rs  target.rs
crates/builder/src/types/plugin/installer/: mod.rs
crates/builder/src/types/table/: mod.rs
crates/builder/tests/: cli_integration.rs  common.rs  playground.rs
crates/builder/tests/fixtures/copy/: builder.yaml
crates/builder/tests/fixtures/copy/src/: test.txt
crates/builder_/: Builder.toml  Cargo.toml  input.yaml
crates/command/: Cargo.toml
crates/command/src/: assemble.rs  copy.rs  fontforge.rs  lib.rs  localized.rs  out.rs  out_integration_test.rs  out_snapshot_test.rs  sass.rs  swift_package.rs  uniffi.rs  wasm.rs
crates/command/src/snapshots/: builder_command__out_snapshot_test__tests__generate_edge_case_names.snap  builder_command__out_snapshot_test__tests__generate_empty_assets.snap  builder_command__out_snapshot_test__tests__generate_multilingual_asset_code.snap  builder_command__out_snapshot_test__tests__generate_multiple_assets_code.snap  builder_command__out_snapshot_test__tests__generate_simple_asset_code.snap
crates/command/tests/: integration.rs
crates/common/: Cargo.toml
crates/common/src/: asset.rs  asset_code_generation.rs  asset_code_generation_integration_test.rs  asset_code_generation_test.rs  dir.rs  envargs.rs  ext.rs  generator.rs  hash_output.rs  hash_output_integration_test.rs  lib.rs  log.rs  mime.rs  out.rs
crates/common/src/site_fs/: asset.rs  asset_generation_integration_test.rs  asset_path.rs  encoding.rs  mod.rs
crates/common/src/site_fs/tests/: mod.rs
crates/common/src/snapshots/: common__asset_code_generation_test__tests__generate_edge_case_names.snap  common__asset_code_generation_test__tests__generate_embed_multilingual.snap  common__asset_code_generation_test__tests__generate_embed_provider.snap  common__asset_code_generation_test__tests__generate_empty_assets.snap  common__asset_code_generation_test__tests__generate_filesystem_provider.snap  common__asset_code_generation_test__tests__generate_multilingual_asset_code.snap  common__asset_code_generation_test__tests__generate_multiple_assets_code.snap  common__asset_code_generation_test__tests__generate_simple_asset_code.snap
crates/copy/: Cargo.toml
crates/copy/src/: lib.rs
crates/examples/: Cargo.toml  build.rs
crates/examples/assets/: app.js  styles.css
crates/examples/embedded/: config.json
crates/examples/src/: lib.rs  main.rs
crates/fontforge/: Cargo.toml
crates/fontforge/src/: lib.rs  main.rs
crates/localized/: Cargo.toml
crates/localized/src/: generator.rs  lib.rs  main.rs
crates/localized/src/tests/: mod.rs
crates/mtimes/: Cargo.toml
crates/mtimes/src/: lib.rs  lock.rs  traits.rs
crates/mtimes/tests/: contract_test_file_lock.rs  contract_test_input_files.rs  contract_test_output_files.rs  contract_test_record_success.rs  contract_test_should_skip.rs
crates/sass/: Cargo.toml
crates/sass/src/: lib.rs  main.rs
crates/seahasher/: Cargo.toml
crates/swift_package/: Cargo.toml
crates/swift_package/src/: lib.rs
crates/uniffi/: Cargo.toml
crates/uniffi/src/: lib.rs  main.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: dwarf.rs  lib.rs
examples/assets-wksp/: Cargo.toml
examples/assets-wksp/assets/: Cargo.toml  build.rs
examples/assets-wksp/assets/iconfont/: polyglot.sfd
examples/assets-wksp/assets/style/: main.scss
examples/playground/: Cargo.toml  test-playground.sh  test.sh
examples/playground/assets/: Cargo.toml  build.rs
examples/playground/assets/src/: lib.rs
examples/playground/client/: Cargo.toml  build.rs
examples/playground/client/src/: lib.rs
examples/playground/wasm/: Cargo.toml  index.html
examples/wasm-wksp/client/: Cargo.toml
playground/: Cargo.toml  build.rs
playground/src/: lib.rs
tests/: processing.rs
(+51 files in other folders)
