
[workspace]
resolver = "2"

members = ["crates/*"]

[workspace.package]
version = "0.1.13"
repository = "https://github.com/human-solutions/builder"
license = "MIT"
edition = "2021"
description = "Command line tool for building web assets, wasm and mobile libs"
authors = ["henrik akesson"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.15.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
brotli = "7.0"
camino-fs = { git = "https://github.com/human-solutions/camino-fs", tag = "v0.1.2", features = [
    "serde",
] }
cargo_metadata = "0.18"
flate2 = "1.0"
grass = "0.13"
lightningcss = { version = "1.0.0-alpha.60", features = ["browserslist"] }
log = "0.4"
seahash = "4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
simplelog = "0.12"
icu_locid = "1.5"
uniffi_bindgen = "0.28"
tempfile = "3.14"
time = "0.3"
wasm-bindgen-cli-support = "0.2"
wasm-opt = "0.116"
which = "7.0"
