
[workspace]
resolver = "2"

members = ["crates/*"]
exclude = ["crates/examples"]

[workspace.package]
version = "0.1.28"
repository = "https://github.com/human-solutions/builder"
license = "MIT"
edition = "2024"
description = "Command line tool for building web assets, wasm and mobile libs"
authors = ["henrik akesson"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.29.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
# Path that installers should place binaries in
install-path = "CARGO_HOME"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
brotli = "8.0"
camino-fs = { version = "0.1", features = ["serde"] }
cargo_metadata = "0.23"
flate2 = "1.1"
fluent-langneg = "0.14.2"
fs-err = "3.2"
grass = "0.13"
icu_locid = "1.5"
lightningcss = { version = "1.0.0-alpha.68", features = ["browserslist"] }
log = "0.4"
seahash = "4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
simplelog = "0.12"
swift-package = "0.1"
uniffi_bindgen = "0.30"
uuid = { version = "1.18", features = ["v4"] }
tempfile = "3.23"
time = "0.3"
wasmbin = "0.8"

# Dev dependencies only
insta = "1.44"
rust-embed = "8.9"
wasm-bindgen-cli-support = "0.2"
wasm-opt = "0.116"
which = "8.0"
