
[package]
authors = ["henrik akesson"]
description = "Command line tool for building web assets, wasm and mobile libs"
edition = "2021"
license = "MIT"
name = "builder"
repository = "https://github.com/human-solutions/builder"
version = "0.0.1"

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
grass = "0.13.1"
ignore = "0.4.20"
lightningcss = { version = "1.0.0-alpha.57", features = ["browserslist"] }
thiserror = "1.0.48"
