
[package]
authors = ["henrik akesson"]
description = "Command line tool for building web assets, wasm and mobile libs"
edition = "2021"
license = "MIT"
name = "builder"
repository = "https://github.com/human-solutions/builder"
version = "0.0.1"

[dependencies]
grass = "0.13"
# ignore = "0.4"
lightningcss = { version = "1.0.0-alpha.57", features = ["browserslist"] }
# thiserror = "1.0"
camino = "1.1"
toml_edit = "0.22"
anyhow = "1.0"
fs-err = "2.11"
which = "6.0"
seahash = "4.1"
base64 = "0.22"
brotli = "6.0"
flate2 = "1.0"
unic-langid = "0.9"
