[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[dependencies]

[build-dependencies]
which = "6.0"

[package.metadata.pre-build]
# auto update the iconfont if fontforge is installed
fontforge = "iconfont/polyglot.sfd"

[package.metadata.pre-build."*".debug]
files = [
    { path = "iconfont/polyglot.woff2", out = { folder = "static", checksum = true } },
]
[package.metadata.pre-build."*".release]
files = [
    { path = "iconfont/polyglot.woff2", out = { folder = "static", checksum = true, brotli = true, gzip = true } },
]

##### MOBILE DEBUG AND RELEASE #####
[package.metadata.pre-build.mobile.debug]
sass = [{ file = "style/main.scss" }]

[package.metadata.pre-build.mobile.release]
sass = [{ file = "style/main.scss", optimize = true, out = { brotli = true } }]

##### WEB DEBUG #####

[package.metadata.pre-build.web.debug]
sass = [
    { file = "style/main.scss", out = { checksum = true, folder = "static" } },
]
localized = [
    { path = "img/apple_store", file-extension = "svg", out = { folder = "static/badge", checksum = true } },
]

##### WEB RELEASE #####

[[package.metadata.pre-build.web.release.localized]]
path = "img/apple_store"
file-extension = "svg"
out = { folder = "static/badge", checksum = true, brotli = true, gzip = true }


[[package.metadata.pre-build.web.release.sass]]
file = "style/main.scss"
optimize = true
out = { brotli = true, gzip = true, checksum = true, folder = "static" }
