[package]
name = "builder-assets"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
fluent-langneg.workspace = true
icu_locid.workspace = true
rust-embed.workspace = true

[dev-dependencies]
# Test dependencies will be added as needed