
[package]
name = "builder"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
builder-assemble = { path = "../assemble" }
builder-copy = { path = "../copy" }
builder-fontforge = { path = "../fontforge" }
builder-sass = { path = "../sass" }
builder-localized = { path = "../localized" }
builder-uniffi = { path = "../uniffi" }
builder-command = { path = "../command" }
builder-wasm = { path = "../wasm" }
common = { path = "../common" }

camino.workspace = true
cargo_metadata.workspace = true
fs-err.workspace = true
toml.workspace = true

[dev-dependencies]
insta = "1.41"
