
[package]
name = "builder"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
name = "builder"
path = "src/lib.rs"

[[bin]]
name = "builder"
path = "src/main.rs"

[dependencies]
builder-command = { path = "../command" }
builder-copy = { path = "../copy" }
builder-fontforge = { path = "../fontforge" }
builder-sass = { path = "../sass" }
builder-localized = { path = "../localized" }
builder-mtimes = { path = "../mtimes" }
builder-uniffi = { path = "../uniffi" }
builder-wasm = { path = "../wasm" }
builder-swift-package = { path = "../swift_package" }
common = { path = "../common" }

camino-fs.workspace = true
cargo_metadata.workspace = true
log.workspace = true
serde.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
cargo-husky.workspace = true
insta = "1.43"
camino-fs.workspace = true
