[package]
name = "builder-command"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true


[dependencies]
builder-assets = { path = "../assets" }

camino-fs.workspace = true
fs-err.workspace = true
icu_locid = { workspace = true, features = ["serde"] }
log.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
