[package]
name = "common"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
builder-command = { path = "../command" }

anyhow.workspace = true
base64.workspace = true
brotli.workspace = true
camino-fs.workspace = true
flate2.workspace = true
fs-err.workspace = true
icu_locid.workspace = true
log.workspace = true
seahash.workspace = true
simplelog.workspace = true
tempfile.workspace = true
time.workspace = true
