[package]
name = "builder-copy"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true

[dependencies]
common = { path = "../common" }
builder-command = { path = "../command" }

log.workspace = true
