[package]
name = "builder-swift-package"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true

[dependencies]
builder-command = { path = "../command" }
common = { path = "../common" }

log.workspace = true
swift-package.workspace = true
