[package]
name = "builder-uniffi"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
builder-command = { path = "../command" }

camino.workspace = true
fs-err.workspace = true
log.workspace = true
uniffi_bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
