[package]
name = "builder-uniffi"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
builder-command = { path = "../command" }

camino-fs.workspace = true
log.workspace = true
uniffi_bindgen.workspace = true
serde_json.workspace = true
