[package]
name = "builder-wasm"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
common = { path = "../common" }
builder-command = { path = "../command" }

base64.workspace = true
camino-fs.workspace = true
log.workspace = true
seahash.workspace = true
wasm-bindgen-cli-support.workspace = true
wasm-opt.workspace = true
which.workspace = true
