[package]
name = "builder-wasm"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
common = { path = "../common" }
builder-command = { path = "../command" }

anyhow.workspace = true
base64.workspace = true
camino-fs.workspace = true
fs-err.workspace = true
log.workspace = true
seahash.workspace = true
tempfile.workspace = true
uuid.workspace = true
wasmbin.workspace = true
wasm-bindgen-cli-support.workspace = true
wasm-opt.workspace = true
which.workspace = true
