[package]
name = "assets"
version = "0.1.0"
edition = "2021"

[build-dependencies]
which = "6.0"

[[package.metadata.prebuild.fontforge]]
# auto update the iconfont if fontforge is installed
item = "iconfont/polyglot.sfd"

[[package.metadata.prebuild.files]]
profile = ["debug"]
path = "iconfont/polyglot.woff2"
out = { folder = "static", checksum = true }

[[package.metadata.prebuild.files]]
profile = ["release"]
path = "iconfont/polyglot.woff2"
out = { folder = "static", checksum = true, brotli = true, gzip = true }

##### MOBILE DEBUG AND RELEASE #####

[[package.metadata.prebuild.sass]]
profile = ["debug"]
file = "style/main.scss"

[[package.metadata.prebuild.sass]]
profile = ["release"]
file = "style/main.scss"
optimize = true
out = { brotli = true }

##### WEB DEBUG #####

[[package.metadata.prebuild.sass]]
profile = ["debug"]
file = "style/main.scss"
out = { checksum = true, folder = "static" }

[[package.metadata.prebuild.localized]]
path = "img/apple_store"
file-extension = "svg"
out = { folder = "static/badge", checksum = true }

##### WEB RELEASE #####

[[package.metadata.prebuild.localized]]
profile = ["debug"]
path = "img/apple_store"
file-extension = "svg"
out = { folder = "static/badge", checksum = true, brotli = true, gzip = true }
generated-module = "gen/localized.rs"

[[package.metadata.prebuild.sass]]
profile = ["release"]
file = "style/main.scss"
optimize = true
out = { brotli = true, gzip = true, checksum = true, folder = "static" }
