[package]
name = "assets"
version = "0.1.0"
edition = "2021"

[build-dependencies]
which = "6.0"

[package.metadata.prebuild]
# auto update the iconfont if fontforge is installed
fontforge = "iconfont/polyglot.sfd"

[[package.metadata.prebuild."*".debug.files]]
path = "iconfont/polyglot.woff2"
out = { folder = "static", checksum = true }

[[package.metadata.prebuild."*".release.files]]
path = "iconfont/polyglot.woff2"
out = { folder = "static", checksum = true, brotli = true, gzip = true }

##### MOBILE DEBUG AND RELEASE #####
[[package.metadata.prebuild.mobile.debug.sass]]
file = "style/main.scss"

[[package.metadata.prebuild.mobile.release.sass]]
file = "style/main.scss"
optimize = true
out = { brotli = true }

##### WEB DEBUG #####

[[package.metadata.prebuild.web.debug.sass]]
file = "style/main.scss"
out = { checksum = true, folder = "static" }

[[package.metadata.prebuild.web.debug.localized]]
path = "img/apple_store"
file-extension = "svg"
out = { folder = "static/badge", checksum = true }


##### WEB RELEASE #####

[[package.metadata.prebuild.web.release.localized]]
path = "img/apple_store"
file-extension = "svg"
out = { folder = "static/badge", checksum = true, brotli = true, gzip = true }


[[package.metadata.prebuild.web.release.sass]]
file = "style/main.scss"
optimize = true
out = { brotli = true, gzip = true, checksum = true, folder = "static" }


######################
##### POST build #####
######################

[[package.metadata.postbuild.web.release.wasmbindgen]]
optimize-wasm = true
minify-js = true
out = { folder = "static/", checksum = true, uncompressed = true, brotli = true, gzip = true }

[[package.metadata.postbuild.web.debug.wasmbindgen]]
out = { folder = "static/", checksum = true }
