[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }

[build-dependencies]
which = "6.0"

######################
##### POST build #####
######################

[[package.metadata.postbuild.web.debug.wasmbindgen]]
optimize-wasm = true
minify-js = true
out = { folder = "static/", checksum = true, uncompressed = true, brotli = true, gzip = true }

[[package.metadata.postbuild.web.debug.wasmbindgen]]
out = { folder = "static/", checksum = true }